--- a/Dashboard.html
+++ b/Dashboard.html
@@ -1,25 +1,78 @@
 <html>
     <title>Vehicle Telematics Dashboard</title>
     <body>
-      <h1 align="center">Averages for # vehicles</h1>
-      <table align="center">
+      <h1 align='center'>Averages for # vehicles</h1>
+      <table align='center'>
           <tr>
               <th>Odometer (miles) |</th><th>Consumption (gallons) |</th><th>Last Oil Change |</th><th>Engine Size (liters)</th>
           </tr>
           <tr>
-              <td align="center">#</td><td align="center">#</td><td align="center">#</td align="center"><td align="center">#</td>
+              <td align='center'>3228.88888888889</td><td align='center'>2</td><td align='center'>3</td align='center'><td align='center'>4</td>
           </tr>
       </table>
-      <h1 align="center">History</h1>
-      <table align="center" border="1">
+      <h1 align='center'>History</h1>
+      <table align='center' border='1'>
           <tr>
               <th>VIN</th><th>Odometer (miles)</th><th>Consumption (gallons)</th><th>Last Oil Change</th><th>Engine Size (liters)</th>
           </tr>
           <tr>
-              <td align="center">#</td><td align="center">#</td><td align="center">#</td><td align="center">#</td align="center"><td align="center">#</td>
+              <td align='center'>0</td><td align='center'>1</td><td align='center'>2</td><td align='center'>3</td><td align='center'>4</td>
+          </tr>
+      </table><table align='center' border='1'>
+          <tr>
+              <th>VIN</th><th>Odometer (miles)</th><th>Consumption (gallons)</th><th>Last Oil Change</th><th>Engine Size (liters)</th>
           </tr>
           <tr>
-              <td align="center">45435</td><td align="center">123</td><td align="center">234</td><td align="center">345</td align="center"><td align="center">4.5</td>
+              <td align='center'>0</td><td align='center'>1</td><td align='center'>2</td><td align='center'>3</td><td align='center'>4</td>
+          </tr>
+      </table><table align='center' border='1'>
+          <tr>
+              <th>VIN</th><th>Odometer (miles)</th><th>Consumption (gallons)</th><th>Last Oil Change</th><th>Engine Size (liters)</th>
+          </tr>
+          <tr>
+              <td align='center'>0</td><td align='center'>1</td><td align='center'>2</td><td align='center'>3</td><td align='center'>4</td>
+          </tr>
+      </table><table align='center' border='1'>
+          <tr>
+              <th>VIN</th><th>Odometer (miles)</th><th>Consumption (gallons)</th><th>Last Oil Change</th><th>Engine Size (liters)</th>
+          </tr>
+          <tr>
+              <td align='center'>0</td><td align='center'>1</td><td align='center'>2</td><td align='center'>3</td><td align='center'>4</td>
+          </tr>
+      </table><table align='center' border='1'>
+          <tr>
+              <th>VIN</th><th>Odometer (miles)</th><th>Consumption (gallons)</th><th>Last Oil Change</th><th>Engine Size (liters)</th>
+          </tr>
+          <tr>
+              <td align='center'>0</td><td align='center'>1</td><td align='center'>2</td><td align='center'>3</td><td align='center'>4</td>
+          </tr>
+      </table><table align='center' border='1'>
+          <tr>
+              <th>VIN</th><th>Odometer (miles)</th><th>Consumption (gallons)</th><th>Last Oil Change</th><th>Engine Size (liters)</th>
+          </tr>
+          <tr>
+              <td align='center'>0</td><td align='center'>1</td><td align='center'>2</td><td align='center'>3</td><td align='center'>4</td>
+          </tr>
+      </table><table align='center' border='1'>
+          <tr>
+              <th>VIN</th><th>Odometer (miles)</th><th>Consumption (gallons)</th><th>Last Oil Change</th><th>Engine Size (liters)</th>
+          </tr>
+          <tr>
+              <td align='center'>0</td><td align='center'>1</td><td align='center'>2</td><td align='center'>3</td><td align='center'>4</td>
+          </tr>
+      </table><table align='center' border='1'>
+          <tr>
+              <th>VIN</th><th>Odometer (miles)</th><th>Consumption (gallons)</th><th>Last Oil Change</th><th>Engine Size (liters)</th>
+          </tr>
+          <tr>
+              <td align='center'>0</td><td align='center'>1</td><td align='center'>2</td><td align='center'>3</td><td align='center'>4</td>
+          </tr>
+      </table><table align='center' border='1'>
+          <tr>
+              <th>VIN</th><th>Odometer (miles)</th><th>Consumption (gallons)</th><th>Last Oil Change</th><th>Engine Size (liters)</th>
+          </tr>
+          <tr>
+              <td align='center'>0</td><td align='center'>1</td><td align='center'>2</td><td align='center'>3</td><td align='center'>4</td>
           </tr>
       </table>
     </body>
