--- a/Dashboard.html
+++ b/Dashboard.html
@@ -7,7 +7,7 @@
               <th>Odometer (miles) |</th><th>Consumption (gallons) |</th><th>Last Oil Change |</th><th>Engine Size (liters)</th>
           </tr>
           <tr>
-              <td align='center'>3228.88888888889</td><td align='center'>2</td><td align='center'>3</td align='center'><td align='center'>4</td>
+              <td align='center'>42.8</td><td align='center'>4.0</td><td align='center'>3.3</td align='center'><td align='center'>8.0</td>
           </tr>
       </table>
       <h1 align='center'>History</h1>
@@ -16,63 +16,91 @@
               <th>VIN</th><th>Odometer (miles)</th><th>Consumption (gallons)</th><th>Last Oil Change</th><th>Engine Size (liters)</th>
           </tr>
           <tr>
-              <td align='center'>0</td><td align='center'>1</td><td align='center'>2</td><td align='center'>3</td><td align='center'>4</td>
+              <td align='center'>1111</td><td align='center'>3.0</td><td align='center'>5.0</td><td align='center'>1.0</td><td align='center'>2.0</td>
           </tr>
       </table><table align='center' border='1'>
           <tr>
               <th>VIN</th><th>Odometer (miles)</th><th>Consumption (gallons)</th><th>Last Oil Change</th><th>Engine Size (liters)</th>
           </tr>
           <tr>
-              <td align='center'>0</td><td align='center'>1</td><td align='center'>2</td><td align='center'>3</td><td align='center'>4</td>
+              <td align='center'>1230</td><td align='center'>125.0</td><td align='center'>1.0</td><td align='center'>3.0</td><td align='center'>5.0</td>
           </tr>
       </table><table align='center' border='1'>
           <tr>
               <th>VIN</th><th>Odometer (miles)</th><th>Consumption (gallons)</th><th>Last Oil Change</th><th>Engine Size (liters)</th>
           </tr>
           <tr>
-              <td align='center'>0</td><td align='center'>1</td><td align='center'>2</td><td align='center'>3</td><td align='center'>4</td>
+              <td align='center'>123097</td><td align='center'>12.0</td><td align='center'>3.0</td><td align='center'>5.0</td><td align='center'>1.0</td>
           </tr>
       </table><table align='center' border='1'>
           <tr>
               <th>VIN</th><th>Odometer (miles)</th><th>Consumption (gallons)</th><th>Last Oil Change</th><th>Engine Size (liters)</th>
           </tr>
           <tr>
-              <td align='center'>0</td><td align='center'>1</td><td align='center'>2</td><td align='center'>3</td><td align='center'>4</td>
+              <td align='center'>1237</td><td align='center'>15.0</td><td align='center'>1.0</td><td align='center'>3.0</td><td align='center'>5.0</td>
           </tr>
       </table><table align='center' border='1'>
           <tr>
               <th>VIN</th><th>Odometer (miles)</th><th>Consumption (gallons)</th><th>Last Oil Change</th><th>Engine Size (liters)</th>
           </tr>
           <tr>
-              <td align='center'>0</td><td align='center'>1</td><td align='center'>2</td><td align='center'>3</td><td align='center'>4</td>
+              <td align='center'>1238</td><td align='center'>125.0</td><td align='center'>2.0</td><td align='center'>3.0</td><td align='center'>5.0</td>
           </tr>
       </table><table align='center' border='1'>
           <tr>
               <th>VIN</th><th>Odometer (miles)</th><th>Consumption (gallons)</th><th>Last Oil Change</th><th>Engine Size (liters)</th>
           </tr>
           <tr>
-              <td align='center'>0</td><td align='center'>1</td><td align='center'>2</td><td align='center'>3</td><td align='center'>4</td>
+              <td align='center'>1337</td><td align='center'>1.0</td><td align='center'>5.0</td><td align='center'>2.0</td><td align='center'>3.0</td>
           </tr>
       </table><table align='center' border='1'>
           <tr>
               <th>VIN</th><th>Odometer (miles)</th><th>Consumption (gallons)</th><th>Last Oil Change</th><th>Engine Size (liters)</th>
           </tr>
           <tr>
-              <td align='center'>0</td><td align='center'>1</td><td align='center'>2</td><td align='center'>3</td><td align='center'>4</td>
+              <td align='center'>15</td><td align='center'>1.0</td><td align='center'>3.0</td><td align='center'>5.0</td><td align='center'>68.0</td>
           </tr>
       </table><table align='center' border='1'>
           <tr>
               <th>VIN</th><th>Odometer (miles)</th><th>Consumption (gallons)</th><th>Last Oil Change</th><th>Engine Size (liters)</th>
           </tr>
           <tr>
-              <td align='center'>0</td><td align='center'>1</td><td align='center'>2</td><td align='center'>3</td><td align='center'>4</td>
+              <td align='center'>29805712</td><td align='center'>123.0</td><td align='center'>5.0</td><td align='center'>1.0</td><td align='center'>3.0</td>
           </tr>
       </table><table align='center' border='1'>
           <tr>
               <th>VIN</th><th>Odometer (miles)</th><th>Consumption (gallons)</th><th>Last Oil Change</th><th>Engine Size (liters)</th>
           </tr>
           <tr>
-              <td align='center'>0</td><td align='center'>1</td><td align='center'>2</td><td align='center'>3</td><td align='center'>4</td>
+              <td align='center'>510</td><td align='center'>12.0</td><td align='center'>5.0</td><td align='center'>1.0</td><td align='center'>3.0</td>
+          </tr>
+      </table><table align='center' border='1'>
+          <tr>
+              <th>VIN</th><th>Odometer (miles)</th><th>Consumption (gallons)</th><th>Last Oil Change</th><th>Engine Size (liters)</th>
+          </tr>
+          <tr>
+              <td align='center'>555</td><td align='center'>2.0</td><td align='center'>4.0</td><td align='center'>6.0</td><td align='center'>2.0</td>
+          </tr>
+      </table><table align='center' border='1'>
+          <tr>
+              <th>VIN</th><th>Odometer (miles)</th><th>Consumption (gallons)</th><th>Last Oil Change</th><th>Engine Size (liters)</th>
+          </tr>
+          <tr>
+              <td align='center'>5907</td><td align='center'>1.0</td><td align='center'>3.0</td><td align='center'>5.0</td><td align='center'>1.0</td>
+          </tr>
+      </table><table align='center' border='1'>
+          <tr>
+              <th>VIN</th><th>Odometer (miles)</th><th>Consumption (gallons)</th><th>Last Oil Change</th><th>Engine Size (liters)</th>
+          </tr>
+          <tr>
+              <td align='center'>975</td><td align='center'>125.0</td><td align='center'>12.0</td><td align='center'>3.0</td><td align='center'>5.0</td>
+          </tr>
+      </table><table align='center' border='1'>
+          <tr>
+              <th>VIN</th><th>Odometer (miles)</th><th>Consumption (gallons)</th><th>Last Oil Change</th><th>Engine Size (liters)</th>
+          </tr>
+          <tr>
+              <td align='center'>9999</td><td align='center'>12.0</td><td align='center'>3.0</td><td align='center'>5.0</td><td align='center'>1.0</td>
           </tr>
       </table>
     </body>
